# reki

./: Cargo.toml  LICENSE-MIT  README.md
src/: app.rs  event.rs  main.rs
src/git/: commit.rs  graph.rs  mod.rs  repo.rs
src/ui/: log_view.rs  mod.rs
