[package]
name = "reki"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A blazingly fast and aesthetic git log viewer"
repository = "https://github.com/WaterWhisperer/reki"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
git2 = "0.20"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
unicode-truncate = "2.0"
